crates/ty_python_semantic/resources/mdtest/snapshots/Data_descriptors_-_Attribute_assignment_-_attribute_assignment…_-_Invalid_argument_typ…_(72ce72b91bf9e489).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Data descriptors - Attribute assignment - attribute_assignment.md - Invalid argument type
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Descriptor:
 2 |     def __set__(self, instance: object, value: int) -> None:
 3 |         pass
 4 | 
 5 | class C:
 6 |     attr: Descriptor = Descriptor()
 7 | 
 8 | instance = C()
 9 | instance.attr = 1  # fine
10 | 
11 | # TODO: ideally, we would mention why this is an invalid assignment (wrong argument type for `value` parameter)
12 | instance.attr = "wrong"  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Invalid assignment to data descriptor attribute `attr` on type `C` with custom `__set__` method
  --> src/mdtest_snippet.py:12:1
   |
11 | # TODO: ideally, we would mention why this is an invalid assignment (wrong argument type for `value` parameter)
12 | instance.attr = "wrong"  # error: [invalid-assignment]
   | ^^^^^^^^^^^^^
   |
info: rule `invalid-assignment` is enabled by default

```
